@@ -1,3 +1,8 @@
+2009-07-13  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* statistics.tcl: Implement more robust computation of basic statistics
+	* statistics.test: Added testfor this more robust computation
+	* pkgIndex.tcl: Version of statistics package increased to 0.6.1
+
 2009-03-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* linalg.tcl: Solving bugs with test matrices (bugs #2695513, 2695564, 2695618)
 	* linalg.test: Added test cases for border matrix and Wilkinson W- and W+
